fix horizontal overflow

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,3 @@
 * { box-sizing: border-box; margin: 0; padding: 0; }
 body { margin: 0; overflow-x: hidden; }
-html { overflow-x: hidden; }gi 
+html { overflow-x: hidden; }
